2004-12-03  Dalibor Topic  <robilad@kaffe.org>

	*  libraries/javalib/java/awt/geom/Area.java:
	Resynced with GNU Classpath.

	2004-12-01  Michael Koch  <konqueror@gmx.de>

        * java/awt/geom/Area.java
        (QuadSegment.curveArea): Remove unused variables.
        (CubicSegment.curveArea): Likewise.

2004-12-03  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/locale/LocaleInformation_af_ZA.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_DZ.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_IN.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_IQ.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_JO.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_KW.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_LB.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_LY.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_MA.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_QA.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_SY.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_TN.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ar_YE.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_be_BY.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_bn_IN.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_ca_ES.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_cs_CZ.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_cy_GB.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_da_DK.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_de.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_de_AT.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_de_BE.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_de_CH.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_de_DE.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_de_LU.java,