@@ -1,5 +1,14 @@
 2004-12-03  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/awt/print/Book.java:
+        Resynced with GNU Classpath.
+
+	2004-12-01  Michael Koch  <konqueror@gmx.de>
+
+        * java/awt/print/Book.java: Reformatted.
+
+2004-12-03  Dalibor Topic  <robilad@kaffe.org>
+
 	*  libraries/javalib/java/awt/geom/Area.java:
 	Resynced with GNU Classpath.
 
